@@ -128,6 +128,9 @@ Version 2.1-41 (opened December 12, 2013)
 	specified through formal arguments `col` and `lty`. Incidental
 	wish of http://stackoverflow.com/q/22714775/429846.
 
+	* simper: now doesn't fail with obscure error when groups have a
+        single member.
+
 Version 2.1-40 (closed December 12, 2013)	
 	
 	* anova.cca: Function is now based on the new code, but the old is
